# trie-cxx

./: .clang-tidy  .editorconfig  .gitignore  .version.cmake  CHANGELOG  CMakeLists.txt  Makefile  README.md  build.sh  meson.build  meson_options.txt  neverused.cc
.github/: dependabot.yml
.github/workflows/: cmake.yml
ci/brew/: trie-cxx.rb
cmake/: add-policies.cmake  cxx-macros.cmake  prerequisites.cmake  versions-extract.py  versions-gen.cmake
docs/: cmake-help.md
examples/: CMakeLists.txt  hello.cc  values.cc
include/: trie-cxx.hh
include/trie-cxx/: trie-all.hh  trie-base.hh  trie-chrono.hh  trie-core.hh  trie-node.hh  trie-store.hh
include/trie-cxx/details/: trie-unused.hh
src/: CMakeLists.txt  trie-cli.cc
test/: CMakeLists.txt  catch2-demo.cc  catch2-imp.cc  chrono.cc  new.cc  sanitize-asan1.cc  sanitize-asan2.cc  trie-1.cc  trie-2-main.cc  trie-2.cc  x-class.hh  x-dbg.hh  x-log.hh  x-terminal.hh  x-test.hh  x-util.hh
testdata/: trie-dict.txt
